tests/unit-fail/j048b.ref

=============================================================
ERROR! KCC encountered an error while executing this program.
=============================================================
Error: CEA5
Description: Computing pointer difference between two different objects.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:9
=============================================================
File: j048b.c
Function: f
Line: 2
=============================================================
