tests/unit-fail/j048b.c
void f(int a, int b) {
      &b - &a;
}
int main(void) {
      f(5, 6);
      return 0;
}
